-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9, 10, 11, 12
-
Component/s: core-svc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8272886 | 11.0.14-oracle | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8258854 | 11.0.11 | Yasumasa Suenaga | P4 | Resolved | Fixed | b01 |
jcmd supports container in JDK-8193710. However. jhsdb cannot do it.
JDK-8193710 has been changed to check PID namespace. jhsdb should also do so.
- backported by
-
JDK-8258854 jhsdb cannot attach to Java processes running in Docker containers
-
- Resolved
-
-
JDK-8272886 jhsdb cannot attach to Java processes running in Docker containers
-
- Resolved
-
- relates to
-
JDK-8193710 jcmd -l and jps commands do not list Java processes running in Docker containers
-
- Resolved
-
- links to