8205992: jhsdb cannot attach to Java processes running in Docker containers

Reviewed-by: cjplummer, jgeorge